[gd_scene load_steps=7 format=3 uid="uid://ckvi2yuodqttg"]

[ext_resource type="Script" uid="uid://774pkm56njfu" path="res://vanoce.gd" id="1_7swn6"]
[ext_resource type="Texture2D" uid="uid://oaw3rci23wa1" path="res://ChatGPT Image 2. 12. 2025 16_51_44.png" id="2_ffy3m"]
[ext_resource type="Texture2D" uid="uid://bwjggmmgwd88" path="res://KLIK_bez_barvy.png" id="3_fw7ne"]
[ext_resource type="Texture2D" uid="uid://ddo45m1p28bmn" path="res://dárek1.png" id="4_egidj"]
[ext_resource type="Texture2D" uid="uid://2afd15eiecwy" path="res://dárek exploze.png" id="5_1vttb"]
[ext_resource type="Texture2D" uid="uid://b0bhpvn5sww7c" path="res://Číča2.png" id="6_gcohh"]

[node name="Vanoce1" type="Node2D"]
script = ExtResource("1_7swn6")

[node name="PrvniScenaVanocniStrom" type="Sprite2D" parent="."]
position = Vector2(579, 322)
scale = Vector2(2.6113636, 2.179661)

[node name="ChatGptImage2_12_2025165144" type="Sprite2D" parent="."]
position = Vector2(577, 323)
scale = Vector2(0.75134236, 0.6316529)
texture = ExtResource("2_ffy3m")

[node name="Label" type="Label" parent="ChatGptImage2_12_2025165144"]
offset_left = 130.47432
offset_top = -472.7181
offset_right = 733.39514
offset_bottom = -366.64725
theme_override_font_sizes/font_size = 49
text = "Superrrr, nyní klikni ZDE"

[node name="KLIK3" type="TextureButton" parent="ChatGptImage2_12_2025165144"]
offset_right = 40.0
offset_bottom = 40.0
ignore_texture_size = true

[node name="KlikBezBarvy" type="Sprite2D" parent="ChatGptImage2_12_2025165144/KLIK3"]
position = Vector2(636.5273, -322.1706)
scale = Vector2(0.17041259, 0.21255225)
texture = ExtResource("3_fw7ne")

[node name="dárek" type="TextureButton" parent="."]
offset_left = 387.0
offset_top = 412.0
offset_right = 725.4796
offset_bottom = 665.0
texture_normal = ExtResource("4_egidj")
ignore_texture_size = true
stretch_mode = 0

[node name="DárekExploze" type="Sprite2D" parent="."]
visible = false
position = Vector2(551.00006, 477.99997)
scale = Vector2(0.28515625, 0.36889645)
texture = ExtResource("5_1vttb")

[node name="měsíc" type="TextureButton" parent="."]
offset_left = -58.0
offset_top = 19.0
offset_right = 328.0
offset_bottom = 173.0
ignore_texture_size = true
stretch_mode = 0

[node name="měsíc2" type="TextureButton" parent="."]
visible = false
offset_left = -58.0
offset_top = 19.0
offset_right = 328.0
offset_bottom = 173.0
texture_normal = ExtResource("6_gcohh")
ignore_texture_size = true
stretch_mode = 0

[connection signal="pressed" from="ChatGptImage2_12_2025165144/KLIK3" to="." method="_on_klik_3_pressed"]
[connection signal="pressed" from="dárek" to="." method="_on_texture_button_pressed"]
[connection signal="button_up" from="měsíc" to="." method="_on_měsíc_button_up"]
[connection signal="button_up" from="měsíc2" to="." method="_on_měsíc_button_up"]
